src/test/deca/context/invalid/provided/surplus_parametre.deca
// Description:
//    Programme ayant un paramètre non utilisé.
//
// Resultats:
//    Ligne 11 : Erreur contextuelle
//
// Historique:
//    cree le 01/01/2022

{
        void equals(int x, int y, int z){
        	return x == z;
        }

}
